# cloud-info-provider-indigo

./: README.md  requirements.txt  setup.cfg
cloud_info_to_cmdb/: send_to_cmdb.py
debian/: changelog  control  copyright  docs
doc/: admin.md  developer.md  user.md
rpm/: cloud-info-provider-indigo.spec
