[metadata]
name = cloud_info_provider_indigo
summary = INDIGO configuration for Cloud info provider
description-file =
    README.md
author = Baptiste Grenier
author-email = baptiste.grenier@egi.eu
home-page = https://www.indigo-datacloud.eu
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    cloud_info_to_cmdb
data_files =
    /etc/cloud-info-provider/templates = templates/*

[entry_points]

console_scripts =
    send-to-cmdb = cloud_info_to_cmdb.send_to_cmdb:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
